adds "create" to classifieds and fixes some bugs

--- a/app/views/classifieds/index.html.erb
+++ b/app/views/classifieds/index.html.erb
@@ -6,8 +6,8 @@
   <h2> <%= classified.title %> </h2>
 
   <p> <%=classified.description %> </p>
-  <div> <%= "&{classified.price}" %></div>
-  <div><%= classified.category%></div>
+  <div> <%= "$#{classified.price}" %></div>
+  <div><%= classified.category.name%></div>
 
 </article>
 
