--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,4 +2,4 @@
 
 
 <%= link_to "Create New Classified", new_classified_path %>
-<%= "View List of Classifieds", classifieds_path %>
+<%= link_to "View List of Classifieds", classifieds_path %>
