--- a/app/views/classifieds/new.html.erb
+++ b/app/views/classifieds/new.html.erb
@@ -7,7 +7,7 @@
   </div>
   <div>
     <%= form.label :description %>
-    <%= form.textarea :description %>
+    <%= form.text_area :description %>
   </div>
   <div>
     <%= fields_for @classified.category do |category_form| %>
@@ -19,7 +19,7 @@
     <%= form.label :price %>
     <%= form.text_field :price %>
   </div>
-  
+
   <%= form.submit "Create Classified" %>
 
 <% end %>
